<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_ChannelDataType" Id="{bec7c947-a36c-4124-a42d-c947dba3a37f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_ChannelDataType :
(
	Unspecified,
	Int32,
	Uint32,
	Int64,
	Uint64,
	Bool_,
	String_,
	Double,
	Float,
	Enum
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>